# magemaker

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-server  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  server.py  test.yml  test_aws.yaml  test_azure.yaml  test_gcp.yaml  test_query.yml
.github/: pr-reviewer.yml
.github/scripts/: update_docs.py
.github/workflows/: docs-automation.yml
.magemaker_configs/: bert-base-uncased-202501091923.yaml  bert-base-uncased-202501092055.yaml  bert-base-uncased-202501092108.yaml  distilbert-base-uncased-202501092125.yaml  distilbert-base-uncased-202501092244.yaml  distilbert-base-uncased-202501092253.yaml  distilbert-base-uncased-finetuned-sst-2-english-202501092147.yaml  distilbert-base-uncased-finetuned-sst-2-english-202501092210.yaml  facebook--opt-125m-202410251736-202412310021.yaml  facebook--opt-125m-202410251736-202501080358.yaml  facebook--opt-125m-202410251736-202501090300.yaml  facebook--opt-125m-202410251736-202501091758.yaml  google-bert--bert-base-uncased-202501212047.yaml
example_configs/: bert-eqa-query.yaml  bert-uncased.yaml
magemaker/: __init__.py  cli.py  config.py  main.py  runner.py  version.py
magemaker/azure/: azure_model_deploy.py  create_model.py  delete_model.py  query_endpoint.py  resources.py  test_create_model.py  test_create_model_integration.py  test_create_model_unit.py  test_delete_model_integration.py  test_delete_model_unit.py  test_query_endpoint.py  test_query_endpoint_integration.py  (+2 more)
scripts/: preflight.sh
tests/: test_openai_proxy.py
(+40 files in other folders)
