[project]
name = "magemaker"
version = "0.1.6"
description = "A CLI tool to fine-tuning and deploying open-source models"
authors = [
    {name = "eff-kay", email = "faizank@slashml.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "sagemaker>=2.218.1",
    "boto3>=1.34.99",
    "setuptools>=69.5.1",
    "huggingface-hub>=0.23.0",
    "pydantic>=2.7.1",
    "datasets>=2.19.1",
    "transformers>=4.40.2",
    "inquirer>=3.2.4",
    "inquirerpy>=0.3.4",
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "litellm>=1.37.5",
    'google-cloud-aiplatform==1.75.0',
    'azure-ai-ml==1.23.0',
    'azure-identity==1.19.0',
    'azure-mgmt-resource==23.2.0'
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
magemaker = "magemaker.runner:runner"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "magemaker"

[tool.pdm.build]
includes = ["magemaker", "magemaker/scripts/preflight.sh", "magemaker/scripts/setup_role.sh"]  # Include setup.sh in the package distribution


[tool.pdm.dev-dependencies]
test = [
    "openai>=1.27.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]
